k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-service
  labels:
    app: bookstore
spec:
  type: ClusterIP
  selector:
    app: bookstore
  ports:
    - name: http
      protocol: TCP
      port: 9090
      targetPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app: mysql
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
